logs/Slang/chapter-9/9.3.5--statement_labels_par.sv.log
name: statement_labels_par
description: parallel block labels check
should_fail: 0
tags: 9.3.5
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-9/9.3.5--statement_labels_par.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-9/9.3.5--statement_labels_par.sv:12:3: error: language feature not yet supported
		name: fork
		^~~~~~~~~~
